# rustbot

./: .dockerignore  .env.example  .gitignore  .travis.yml  COMMANDS.md  Cargo.toml  Containerfile  Dockerfile  GETTING_STARTED.md  LICENSE.TXT  README.md  build.rs  container-compose.yaml  fly.toml  sqlx-data.json
.github/workflows/: ci.yml  deploy.yml
ci/: publish-docker.sh
migrations/: 20210905215844_initial_migration.sql  20210908154708_user_prefixes.sql  20211011165127_godbolt_targets.sql  20221025021107_ub_create.sql
migrations/2019-05-27-225104_tags/: up.sql
migrations/2019-08-19-210929_roles/: up.sql
migrations/2019-08-19-211002_messages/: down.sql  up.sql
migrations/2019-08-22-231258_users/: up.sql
migrations/2020-08-25-224210_bans/: down.sql  up.sql
postgres-docker/: Dockerfile
serenity-framework/: Cargo.toml
serenity-framework/src/: api.rs  command_history.rs  commands.rs  events.rs  lib.rs
src/: aoc_leaderboard.rs  api.rs  ban.rs  cache.rs  command_history.rs  commands.rs  crates.rs  db.rs  dispatcher.rs  events.rs  godbolt.rs  jobs.rs  lib.rs  main.rs  misc.rs  moderation.rs  playground.rs  prefixes.rs  schema.rs  showcase.rs  state_machine.rs  tags.rs  text.rs  welcome.rs
src/code_execution/: godbolt.rs  mod.rs  playground.rs
src/code_execution/playground/: api.rs  commands.rs  microbench.rs  misc_commands.rs  mod.rs  play_eval.rs  procmacro.rs  util.rs
src/framework/: api.rs  command_history.rs  commands.rs  mod.rs
src/godbolt/: mod.rs  targets.rs
src/moderation/: mod.rs  slowmode.rs
src/playground/: api.rs  compile.rs  microbench.rs  misc_commands.rs  mod.rs  play_eval.rs  procmacro.rs  util.rs
