[package]
name = "rustbot"
version = "0.1.0"
authors = ["kangalioo", "technetos <mrgould93@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.8.7", features = ["model"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
strip-ansi-escapes = "0.1.0" # To remove colors from rustc output from godbolt
chrono = "0.4.0" # To interact with serenity
