[package]
name = "rustbot"
version = "0.1.0"
authors = ["kangalioo", "technetos <mrgould93@gmail.com>", "Ivan Dardi <ivanbdardi@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.7.1"
strip-ansi-escapes = "0.1.0" # To remove colors from rustc output from godbolt
chrono = "0.4.0" # To interact with serenity
# poise = { path = "../poise", features = ["collector"] }
poise = "0.1.0"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "process"] }
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
dotenv = "0.15.0"

# [patch."https://github.com/serenity-rs/serenity"]
# serenity = { git = "https://github.com/kangalioo/serenity", branch = "forum-hack" }
